<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="@string/an">
        <menu>
            <item
                android:title="@string/an_car"
                android:id="@+id/id_car"
                />
        </menu>
    </item>
    <item android:title="@string/ac">
        <menu>
            <item
                android:title="@string/ac_sign_up"
                android:id="@+id/id_sign_up"
                />
            <item
                android:title="@string/ac_sign_in"
                android:id="@+id/id_sign_in"
                />
            <item
                android:title="@string/ac_sign_out"
                android:id="@+id/id_sign_out"
                />
        </menu>
    </item>
</menu>